Bumped version of provysobject library to properly set json-b and jaxb serialisation, experiments with jaxb and jsonb annotations
